--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<h1>Tanishi's Space</h1>
 		<h2>Learn cool stuff about me!</h2>
 	</header>
-	<center><img src="C:\Users\TANISHI\Downloads\TANI_RES(3).jpeg" width="290" height="390"></center>
+	<center><img src="TANI_RES(3).jpeg" width="290" height="390"></center>
 	<section>
 		<p>HI THIS IS TANISHI NAYAK! I AM 17 YEARS OLD, I AM AN ALUMINI OF DELHI PUBLIC SCHOOL ROHINI. I RESIDE IN NEW DELHI AND WISH TO PURSUE WEB DEVELOPEMENT.THIS IS MY FIRST WEB PAGE WHERE YOU CAN KNOW FUN THINGS ABOUT ME! ENJOY</p>
 	</section>
